# min-redis-rust

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
