[package]
name = "mini-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
crossbeam-channel = "0.5.12"
dotenvy = "0.15.7"
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
cargo-run-bin = { version = "1.7.2", default-features = false }

[package.metadata.bin]
mini-redis = { version = "0.4.1", bins = [
    "mini-redis-server",
    "mini-redis-cli",
] }
